src/objects/Requirement__c.object
<CustomObject>
    <description>BME - A Requirement represents a business or technical need specific to the project. Requirements are associated to Work Packages and are the most granular level of functionality.</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actor_s__c</fullName>
        <label>Actor(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Biz_Process_Design_Hours__c</fullName>
        <description>Estimated hours allocated to business process design.</description>
        <label>Biz Process Design Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Approver__c</fullName>
        <label>Business Approver</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>New Requirements</relationshipLabel>
        <relationshipName>Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>Basic Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Configuration_Hours__c</fullName>
        <description>Estimated hours allocated to configuration.</description>
        <label>Configuration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decisions_Rationale__c</fullName>
        <label>Decisions Rationale</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Design_Approach__c</fullName>
        <label>Design Approach</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_Hours__c</fullName>
        <description>Estimated hours allocated to custom development.</description>
        <label>Development Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gap_Analysis__c</fullName>
        <label>Gap Analysis</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gap__c</fullName>
        <label>Gap</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impacted_Systems__c</fullName>
        <label>Impacted Systems</label>
        <picklist>
            <picklistValues>
                <fullName>Impacted Systems</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Implementation_Approach__c</fullName>
        <label>Implementation Approach</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Assumptions__c</fullName>
        <label>Key Assumptions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objects__c</fullName>
        <label>Object(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirements_Hours__c</fullName>
        <description>Estimated hours allocated to gathering requirements.</description>
        <label>Requirements Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <picklist>
            <picklistValues>
                <fullName>Sprint1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stakeholder__c</fullName>
        <label>Stakeholder</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <label>Status Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOE Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Release Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Prioritization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned to Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Scope</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Design_Hours__c</fullName>
        <description>Estimated hours allocated to technical design.</description>
        <label>Technical Design Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>Configuration_Hours__c  +  Development_Hours__c  +  Requirements_Hours__c  +  Technical_Design_Hours__c  +  Biz_Process_Design_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Logic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native / Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External/Integrated App</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Case_Name__c</fullName>
        <formula>Use_Case__r.Use_Case_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Package__c</fullName>
        <label>Work Package</label>
        <referenceTo>Work_Package__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Requirement</label>
    <nameField>
        <displayFormat>REQ - {00000}</displayFormat>
        <label>Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>